# iot-streaming-platform

./: .env  .gitignore  README.md  build.sbt  docker-compose.yml  pyproject.toml
.bloop/: spark-streaming-test.json  spark-streaming.json
.metals/: metals.mv.db
docker/python/: Dockerfile
docker/scala/: Dockerfile
kafka/: consumer.py  producer.py  run_both.sh
project/.bloop/: spark-streaming-build.json
src/devices/: device.py
src/main/generator/producer/: producer.py  run_both.sh
src/main/generator/sensors/: humidity.py  temperature.py
src/main/generator/sensors/enums/: battery.py  humidity.py  status.py  units.py
src/main/python/kafka/: consumer.py  producer.py  run_both.sh
src/main/python/sensors/: main.py  sensor.py  temperature.py
src/main/python/sensors/enums/: battery.py
src/main/resources/: application.conf
src/main/scala/: sparkTest.scala
src/main/scala/.metals/: metals.mv.db
src/main/scala/consumer/: .env  database.scala  sparkConsumer.scala
src/main/scala/consumer/config/: SparkConfig.scala  config.scala
src/main/scala/consumer/processors/: MetricsProcessor.scala
src/main/scala/consumer/writers/: DatabaseWriter.scala
src/main/scala/resources/: lo4j.properties
src/main/test/scala/consumer/processors/: MetricsProcessorTest.scala
src/sensors/: main.py  sensor.py  temperature.py
src/sensors/enums/: temperature.py  units.py
